--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
             <td>Équations différentielles ( Équation de Bernoulli )</td>
         </tr>
         <tr>
-            <td>DGBDBDB</td>
-            <td></td>
+            <td>Hanae Er-rahmouni</td>
+            <td>Théorème de point fixe</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Karim </td>
+            <td>Théorème lien entre les hyperplans et les formes linéaire</td>
         </tr>
         <tr>
             <td>QIYFGfF</td>
