--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </tr>
         <tr>
             <td>Ayoub Ennejmi</td>
-            <td>Transformation de Laplace</td>
+            <td>Theoreme de poincaré </td>
         </tr>
         <tr>
             <td>Aya Amrani idrissi</td>
@@ -166,12 +166,12 @@
             <td>Théorème lien entre les hyperplans et les formes linéaire</td>
         </tr>
         <tr>
-            <td>QIYFGfF</td>
-            <td>zefmuf GFZZ</td>
+            <td>Salma ait akka</td>
+            <td>Théorème d'Abel</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Mohammed El Fouar </td>
+            <td>Théorie des jeux</td>
         </tr>
         <tr>
             <td></td>
