--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
             <td>Théorie des jeux</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Soumia el Khayal</td>
+            <td>Théorème de fubini</td>
         </tr>
         <tr>
             <td></td>
