--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </tr>
         <tr>
             <td>Ilham ajnaou</td>
-            <td>Théorème de maximum</td>
+            <td> forme de Lagrange</td>
         </tr>
         <tr>
             <td>Boujediane Fatima Zahra</td>
@@ -178,8 +178,8 @@
             <td>Théorème de fubini</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>nihad el-alaouy</td>
+            <td>Matrice jacobienne</td>
         </tr>
         <tr>
             <td></td>
