--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
             <td>Matrice jacobienne</td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Aicha Et-Tejjal</td>
+            <td> theoreme d’isomorphisme</td>
         </tr>
         <tr>
             <td></td>
