--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
             <td> theoreme d’isomorphisme</td>
         </tr>
         <tr>
+            <td>Khawla bamehdi</td>
+            <td>Inégalité de Hölder</td>
+        </tr>
+        <tr>
+            <td>Zineb Elgrini</td>
+            <td>theoreme fondamental de convergence</td>
+        </tr>
+        <tr>
             <td></td>
             <td></td>
         </tr>
